[package]
name = "minimp3_ex-sys"
version = "0.1.1"
authors = ["Matthias Geier <Matthias.Geier@gmail.com>"]
categories = ["multimedia::encoding", "external-ffi-bindings"]
keywords = ["mp3"]
description = "Raw FFI bindings to the minimp3_ex library"
readme = "README.md"
license = "CC0-1.0"
repository = "https://github.com/mgeier/minimp3_ex-sys"
edition = "2018"

exclude = [
    ".*",
    "/minimp3/minimp3_test.c",
    "/minimp3/fuzzing/",
    "/minimp3/huffopt/",
    "/minimp3/player/",
    "/minimp3/scripts/",
    "/minimp3/vectors/",
]

[features]
# NB: this feature is not additive!
float-output = []

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"
